[gd_scene load_steps=30 format=2]

[ext_resource path="res://scenes/gui/components/health_bar/HealthBar3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/characters/main/Character.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/light/textures/texture_02.png" type="Texture" id=3]
[ext_resource path="res://scripts/Account.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Nunito/Nunito-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/equipment/EquipmentSlot.gd" type="Script" id=6]
[ext_resource path="res://scenes/equipment/EmptyHanded.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/model/character/character.gltf" type="PackedScene" id=8]

[sub_resource type="SpatialMaterial" id=10]
resource_local_to_scene = true
albedo_color = Color( 0, 0, 1, 1 )
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 0.125, 0.125, 0.125 )
uv1_triplanar = true

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run-cycle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "strafing"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "shoot"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "throw_pose"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "throw"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle"

[sub_resource type="AnimationNodeBlend2" id=17]

[sub_resource type="AnimationNodeOneShot" id=24]
filter_enabled = true
filters = [ "Character/Skeleton:arm.L", "Character/Skeleton:arm.R", "Character/Skeleton:breast", "Character/Skeleton:hand.L", "Character/Skeleton:hand.R" ]

[sub_resource type="AnimationNodeBlend2" id=25]
filter_enabled = true
filters = [ "Character/Skeleton:arm.L", "Character/Skeleton:arm.R", "Character/Skeleton:hand.L", "Character/Skeleton:hand.R", "Character/Skeleton:head" ]

[sub_resource type="AnimationNodeOneShot" id=23]
filter_enabled = true
filters = [ "Character/Skeleton:arm.L", "Character/Skeleton:arm.R", "Character/Skeleton:breast", "Character/Skeleton:hand.L", "Character/Skeleton:hand.R", "Character/Skeleton:spine" ]

[sub_resource type="AnimationNodeBlend2" id=26]
filter_enabled = true
filters = [ "Character/Skeleton:arm.L", "Character/Skeleton:arm.R", "Character/Skeleton:breast", "Character/Skeleton:hand.L", "Character/Skeleton:hand.R", "Character/Skeleton:head", "Character/Skeleton:spine" ]

[sub_resource type="AnimationNodeBlendTree" id=18]
graph_offset = Vector2( -470.59, 29.8278 )
nodes/Animation/node = SubResource( 16 )
nodes/Animation/position = Vector2( -700, 40 )
"nodes/Animation 2/node" = SubResource( 15 )
"nodes/Animation 2/position" = Vector2( -720, 160 )
"nodes/Animation 3/node" = SubResource( 19 )
"nodes/Animation 3/position" = Vector2( -160, 120 )
"nodes/Animation 4/node" = SubResource( 20 )
"nodes/Animation 4/position" = Vector2( -160, 280 )
"nodes/Animation 5/node" = SubResource( 21 )
"nodes/Animation 5/position" = Vector2( -740, 320 )
"nodes/Animation 6/node" = SubResource( 22 )
"nodes/Animation 6/position" = Vector2( -560, 440 )
nodes/Run/node = SubResource( 17 )
nodes/Run/position = Vector2( -540, 80 )
nodes/Shoot/node = SubResource( 24 )
nodes/Shoot/position = Vector2( 20, 200 )
nodes/Strafing/node = SubResource( 25 )
nodes/Strafing/position = Vector2( 0, 0 )
nodes/Throw/node = SubResource( 23 )
nodes/Throw/position = Vector2( -342.143, 314.014 )
nodes/ThrowPose/node = SubResource( 26 )
nodes/ThrowPose/position = Vector2( -540, 260 )
nodes/output/position = Vector2( 360, 100 )
node_connections = [ "output", 0, "Shoot", "Run", 0, "Animation", "Run", 1, "Animation 2", "Shoot", 0, "Strafing", "Shoot", 1, "Animation 4", "ThrowPose", 0, "Run", "ThrowPose", 1, "Animation 5", "Strafing", 0, "Throw", "Strafing", 1, "Animation 3", "Throw", 0, "ThrowPose", "Throw", 1, "Animation 6" ]

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="SphereMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0, 0, 1 )
roughness = 0.3

[sub_resource type="SphereShape" id=9]
radius = 3.0

[sub_resource type="DynamicFont" id=11]
size = 96
outline_size = 12
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("HealthBar3D/Viewport")

[sub_resource type="SpatialMaterial" id=13]
resource_local_to_scene = true
flags_transparent = true
flags_no_depth_test = true
flags_albedo_tex_force_srgb = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = SubResource( 12 )

[node name="Character" type="RigidBody" groups=["player"]]
collision_layer = 3
axis_lock_angular_x = true
axis_lock_angular_z = true
linear_damp = 0.99
script = ExtResource( 2 )
speed = 20.0
turn_vel = 270.0

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )
default_value = 20.0
max_value = 0.0
credit_duration = 3.0

[node name="character" parent="." instance=ExtResource( 8 )]

[node name="Body" parent="character/Character/Skeleton" index="0"]
material/0 = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../character/AnimationPlayer")
active = true
process_mode = 0
parameters/Run/blend_amount = 0.0
parameters/Shoot/active = false
parameters/Strafing/blend_amount = 0.0
parameters/Throw/active = false
parameters/ThrowPose/blend_amount = 1.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
visible = false
mesh = SubResource( 5 )
material/0 = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 6 )

[node name="EquipmentSlot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1 )
script = ExtResource( 6 )
equipment_scn = ExtResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 2, -1.1 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Area" type="Area" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 9 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 4.2, 0 )
billboard = 1
text = "20"
font = SubResource( 11 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
path_desired_distance = 2.0
avoidance_enabled = true
radius = 3.0

[node name="HealthBar3D" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 3.5, 0 )
material/0 = SubResource( 13 )

[connection signal="broke" from="Health" to="." method="_on_Health_broke"]
[connection signal="changed" from="Health" to="." method="_on_Health_changed"]
[connection signal="credit_timeout" from="Health" to="." method="_on_Health_credit_timeout"]
[connection signal="credited" from="Health" to="." method="_on_Health_credited"]
[connection signal="equipment_changed" from="EquipmentSlot" to="." method="_on_EquipmentSlot_equipment_changed"]

[editable path="character"]
[editable path="HealthBar3D"]
